@@ -1,5 +1,5 @@
 #
-# "$Id: htmldoc.list.in,v 1.1.2.15 2003/04/30 15:49:56 mike Exp $"
+# "$Id: htmldoc.list.in,v 1.1.2.16 2003/07/31 12:31:37 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for HTMLDOC.
 #
@@ -11,7 +11,7 @@
 %vendor Easy Software Products
 %license COPYING.txt
 %readme README.txt
-%version 1.8.24b4
+%version 1.8.24b5
 
 # Directories...
 $prefix=@prefix@
@@ -71,5 +71,5 @@ f 0444 root sys $datadir/doc/htmldoc/htmldoc.pdf doc/htmldoc.pdf
 f 0444 root sys $datadir/doc/htmldoc/help.html doc/help.html
 
 #
-# End of "$Id: htmldoc.list.in,v 1.1.2.15 2003/04/30 15:49:56 mike Exp $".
+# End of "$Id: htmldoc.list.in,v 1.1.2.16 2003/07/31 12:31:37 mike Exp $".
 #
